# sandbox

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.h  HUD.cpp  HUD.h  MainWidget.h  MainWindow.cpp  MainWindow.h  README.md  SimpleScene.cpp  SimpleScene.h  SimpleSceneOrig.h  main.cpp
cmake/: FindGLM.cmake  FindSandboxQt.cmake  SandboxUtils.cmake
dialogs/: CMakeLists.txt  SphereDialog.cpp  SphereDialog.h
docs/: CMakeLists.txt
shading/: CMakeLists.txt  lambert.h  model.h
shapes/: CMakeLists.txt  bak_CMakeLists.txt  shape.cpp  shape.h  sphere.cpp  sphere.h
src/: AbstractGLScene.cpp  AbstractGLScene.h  CMakeLists.txt  Canvas.cpp  Canvas.h  HUD.cpp  HUD.h  MainWidget.cpp  MainWindow.cpp  SimpleScene.cpp  SimpleScene.h  SimpleSceneOrig.cpp
src/cameras/: CMakeLists.txt  Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ProjectionCamera.h
src/core/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  CMakeLists.txt  Ray.h  aabb.h
src/dialogs/: CMakeLists.txt  SphereDialog.cpp  SphereDialog.h
src/resources/: resources.qrc
src/shading/: CMakeLists.txt  lambert.cpp
src/shapes/: CMakeLists.txt  shape.cpp  shape.h  sphere.cpp  sphere.h
src/ui/: CMakeLists.txt  Canvas.cpp  Canvas.h  HUD.cpp  HUD.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  SimpleScene.cpp  SimpleScene.h
src/ui/rasterization/: AbstractGLScene.cpp  AbstractGLScene.h  GLCanvas.cpp  GLCanvas.h  RasterizationScene.cpp  RasterizationScene.h  RasterizationWidget.cpp  RasterizationWidget.h
stb/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: RayTest.cpp
tests/shapes/: SphereTest.cpp
